<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="android.mvvmStudy.diary.presentation.EditDiaryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.EditDiaryActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_icn_back"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/pretendard_regular"
                android:includeFontPadding="false"
                android:lineHeight="30dp"
                android:text="@string/edit_title"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_back" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/sv_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/layout_top"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_diary_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/edit_diary_title"
                    android:fontFamily="@font/pretendard_bold"
                    android:includeFontPadding="false"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_diary_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/rectangle_radius_10"
                    android:backgroundTint="@color/gray_e6e6e6"
                    android:text="@={viewModel.title}"
                    android:ems="10"
                    android:fontFamily="@font/pretendard_regular"
                    android:gravity="center"
                    android:hint="@string/edit_diary_title_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingVertical="20dp"
                    android:textColorHint="@color/gray_828282"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_diary_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_diary_title" />

                <TextView
                    android:id="@+id/tv_diary_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/edit_diary_content"
                    android:fontFamily="@font/pretendard_bold"
                    android:includeFontPadding="false"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/et_diary_title"
                    app:layout_constraintTop_toBottomOf="@id/et_diary_title" />

                <EditText
                    android:id="@+id/et_diary_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minLines="8"
                    android:inputType="textMultiLine"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/rectangle_radius_10"
                    android:backgroundTint="@color/gray_e6e6e6"
                    android:text="@={viewModel.content}"
                    android:hint="@string/edit_diary_content_hint"
                    android:textSize="14sp"
                    android:fontFamily="@font/pretendard_regular"
                    android:textColorHint="@color/gray_828282"
                    android:gravity="top|center"
                    android:paddingVertical="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_diary_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_diary_content" />

                <TextView
                    android:id="@+id/tv_line"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/gray_e6e6e6"
                    app:layout_constraintEnd_toEndOf="@+id/et_diary_content"
                    app:layout_constraintStart_toStartOf="@+id/et_diary_content"
                    app:layout_constraintTop_toBottomOf="@+id/et_diary_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit_diary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/edit_diary_today_clear"
                    android:fontFamily="@font/pretendard_regular"
                    android:includeFontPadding="false"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:background="@drawable/rectangle_fill_gray_radius_10"
                    android:paddingVertical="20dp"
                    android:clickable="@{viewModel.canSubmit}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/et_diary_content"
                    app:layout_constraintStart_toStartOf="@+id/et_diary_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_line" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>